<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewCharActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/char_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/char_button"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="328dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/char_toolbar"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/character" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.107">

        <TextView
            android:id="@+id/charStr"
            android:layout_width="130dp"
            android:layout_height="37dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/char_str"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/charButtonStrMinus"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="onClickMinus"
            android:text="-" />

        <Button
            android:id="@+id/charButtonStrPlus"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="onClickAdd"
            android:text="+" />

        <TextView
            android:id="@+id/char_lvl"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_marginLeft="32dp"
            android:text="@string/char_lvl"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/charTough"
            android:layout_width="130dp"
            android:layout_height="37dp"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/char_tough"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/charButtonToughMinus"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="onClickMinus"
            android:text="-" />

        <Button
            android:id="@+id/charButtonToughPlus"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="onClickAdd"
            android:text="+" />

        <TextView
            android:id="@+id/char_xp"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_marginLeft="32dp"
            android:text="@string/char_xp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/charHealth"
            android:layout_width="130dp"
            android:layout_height="37dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/char_health"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/charButtonHealthMinus"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="onClickMinus"
            android:text="-" />

        <Button
            android:id="@+id/charButtonHealthPlus"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="onClickAdd"
            android:text="+" />


        <TextView
            android:id="@+id/char_hp"
            android:layout_width="150dp"
            android:layout_height="37dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_marginLeft="32dp"
            android:text="@string/char_hp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/char_remain"
            android:layout_width="250dp"
            android:layout_height="37dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:text="@string/char_remain"
            android:textSize="18sp"
            android:textStyle="bold" />

    </GridLayout>


    <Button
        android:id="@+id/char_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"
        android:text="@string/char_button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/char_button_close"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/char_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:onClick="onClickClose"
        android:text="@string/char_button_close"
        app:layout_constraintBottom_toBottomOf="@+id/char_button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/char_button_save"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>