<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathFightResultActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/result_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/fight_button"/>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="328dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_toolbar"
        app:layout_constraintVertical_bias="0.325"
        app:srcCompat="@drawable/result_player_lost" />

    <TextView
        android:id="@+id/result_result"
        android:layout_width="328dp"
        android:layout_height="94dp"
        android:text="@string/result_won"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/result_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_toolbar" />

    <TextView
        android:id="@+id/result_xp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xp_gain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_image"
        app:layout_constraintVertical_bias="0.118"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/result_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:text="@string/gold_gain"
        app:layout_constraintBottom_toBottomOf="@+id/result_xp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/result_xp"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/result_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickOk"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_image"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/result_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="42dp"
        android:text="@string/level_gained"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/result_finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_image"
        app:layout_constraintVertical_bias="0.318"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>