<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="328dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/main_screen" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="40dp"
        android:onClick="onClickChar"
        android:text="@string/char_button"
        app:layout_constraintBottom_toTopOf="@+id/fight_button"
        app:layout_constraintEnd_toStartOf="@+id/shop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shop_button"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="40dp"
        android:onClick="onClickShop"
        android:text="@string/shop_button"
        app:layout_constraintBottom_toTopOf="@+id/help_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fight_button"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="140dp"
        android:text="@string/fight_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/help_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_button"
        android:onClick="onClickFight"/>

    <Button
        android:id="@+id/help_button"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="140dp"
        android:layout_marginTop="50dp"
        android:text="@string/help_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fight_button"
        app:layout_constraintTop_toBottomOf="@+id/shop_button"
        android:onClick="onClickHelp"/>
</androidx.constraintlayout.widget.ConstraintLayout>