<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewShopActivity"
    android:id="@+id/shop_layout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/shop_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/shop_button"/>

    <ImageView
        android:id="@+id/shop_image"
        android:layout_width="328dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_toolbar"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/shop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_image"
        app:layout_constraintBottom_toTopOf="@+id/shop_grid"
        android:id="@+id/money_layout">

        <TextView
            android:id="@+id/money_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/shop_addition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_layout"
        app:layout_constraintVertical_bias="0"
        ></FrameLayout>

    <GridLayout
        android:id="@+id/shop_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_image"
        app:layout_constraintVertical_bias="0.068">

        <TextView
            android:id="@+id/weapon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weapon"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/weapon_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/buy_weapon_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickWeapon"
            android:text="Buy" />

        <TextView
            android:id="@+id/armor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/armor"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/armor_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buy"
            android:id="@+id/buy_armor_button"/>

        <TextView
            android:id="@+id/potion_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potion"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/potion_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#253A77"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="658dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buy"
            android:id="@+id/buy_potion_button"/>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>